Fix layout of file input
[type=file] input is hidden now by opacity:0 css style.
But it still overlaps the input label and warning tooltip.
This commit fixed this by hiding the input with display:none.

Closes-Bug: #1571641

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -1219,7 +1219,7 @@ input[type=range] {
       float: left;
     }
     input[type=file] {
-      opacity: 0;
+      display: none;
       position: absolute;
     }
     &:not(.disabled) input.file-name[readonly] {
